<resources>
    <string name="app_name">Szőnyeg webshop</string>
    <string name="name">Email</string>
    <string name="password">Jelszó</string>
    <string name="login">BEJELENTKEZÉS</string>
    <string name="registration">REGISZTRÁCIÓ</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Póstai cím</string>
    <string name="buyer">vasarlo</string>
    <string name="seller">eladó</string>
    <string name="accept_terms">Elfogadom az ÁSZF-t</string>
    <string name="decline_terms">Nem fogdom el az ÁSZF-t</string>
    <string name="postal_code">Irányítószám</string>
    <string name="logout">Kijelentkezés</string>
<!--    <string name="item_placeholder">Shop</string>-->


    <string-array name="phone_modes">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>

    <string name="title_placeholder">Név</string>
    <string name="item_placeholder">Leiras</string>
    <string name="item_info_placeholder">Infó a termékről</string>

    <string-array name="shopping_item_names">
        <item>lidersholm</item>
        <item>vollerslev</item>
        <item>vollerslev2</item>
        <item>stoense</item>
        <item>stoense2</item>
        <item>hampen</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>lydersholm_rug_flatwoven_in_outdoor_medium_brown</item>
        <item>vollerslev_rug_high_pile_gray</item>
        <item>vollerslev_rug_high_pile_grey_green</item>
        <item>stoense_rug_low_pile_dark_grey</item>
        <item>stoense_rug_low_pile_medium_grey</item>
        <item>hampen_rug_high_pile_beige</item>
    </string-array>

    <string-array name="shopping_item_rates">
        <item>3.5</item>
        <item>3.5</item>
        <item>2.5</item>
        <item>4.0</item>
        <item>1.5</item>
        <item>4.5</item>
    </string-array>

    <string-array name="shopping_item_images">
        <item>@drawable/lydersholm_rug_flatwoven_in_outdoor_medium_brown</item>
        <item>@drawable/vollerslev_rug_high_pile_gray</item>
        <item>@drawable/vollerslev_rug_high_pile_grey_green</item>
        <item>@drawable/stoense_rug_low_pile_dark_grey</item>
        <item>@drawable/stoense_rug_low_pile_medium_grey</item>
        <item>@drawable/hampen_rug_high_pile_beige</item>
    </string-array>

    <string-array name="shopping_item_prices">
        <item>1000</item>
        <item>5000</item>
        <item>3000</item>
        <item>4000</item>
        <item>1100</item>
        <item>4500</item>
    </string-array>

</resources>