<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkPeacockBlue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/yellowishBrown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/yellowishBrown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@color/green"
        android:backgroundTint="@color/green"
        app:layout_constraintVertical_bias="0.307" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/yellowishBrown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        android:textColorHint="@color/green"
        android:backgroundTint="@color/green"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:onClick="login"
        android:backgroundTint="@color/darkGreen"
        android:textColor="@color/yellowishBrown"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/registerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="18sp"
        android:onClick="register"
        android:backgroundTint="@color/darkGreen"
        android:textColor="@color/yellowishBrown"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>